<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:layoutDirection="rtl"
        android:paddingHorizontal="@dimen/dp16"
        tools:targetApi="jelly_bean_mr1">

        <ImageView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="8dp"
            android:src="@drawable/ic_apps_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_extra_bold"
            android:gravity="center_vertical"
            android:text="@string/video_trimmer"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/bg_top"
                android:layout_width="match_parent"
                android:layout_height="1500dp"
                android:layout_alignBottom="@id/rv_top_features"
                android:background="@drawable/bg_main_top" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bg_top"
                android:layout_alignBottom="@id/rv_new_themes"
                android:background="@drawable/bg_main_bot"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:id="@+id/layout_banner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="@dimen/dp16"
                android:layout_marginTop="@dimen/dp16"
                android:background="@color/transparent"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_banner"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imv_banner"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/dp20"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_theme_1"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                    app:strokeColor="@color/primary_light"
                    app:strokeWidth="10dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="@dimen/dp8"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_toStartOf="@id/imv_banner"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:id="@+id/txt_banner_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:text="@string/txt_video_timmer"
                        android:textColor="@color/primary"
                        android:textSize="26sp"
                        tools:ignore="RelativeOverlap" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_create_now"
                        style="@style/ThemeMaterialButtonColor"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/bg_btn_rounded"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/txt_create_now"
                        android:textAllCaps="false"
                        android:textColor="@color/primary" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_top_features"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_banner"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp32"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/txt_top_features"
                android:textColor="@color/primary"
                android:textSize="26sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_top_features"
                android:layout_marginHorizontal="@dimen/dp12"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="4"
                android:paddingBottom="@dimen/dp8"
                tools:listitem="@layout/item_top_features" />

            <TextView
                android:id="@+id/tv_save_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_top_features"
                android:layout_marginStart="@dimen/dp16"
                android:layout_marginTop="@dimen/dp26"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/txt_save_gallery"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_save_gallery"
                android:layout_marginHorizontal="@dimen/dp12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_save_gallery"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:itemCount="6"
                tools:listitem="@layout/item_save_gallery" />

            <TextView
                android:id="@+id/tv_new_stickers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_save_gallery"
                android:layout_marginTop="@dimen/dp32"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/txt_new_sticker"
                android:layout_marginStart="@dimen/dp16"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_new_stickers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_new_stickers"
                android:layout_marginHorizontal="@dimen/dp12"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_new_sticker" />

            <TextView
                android:id="@+id/tv_new_themes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp16"
                android:layout_below="@id/rv_new_stickers"
                android:layout_marginTop="@dimen/dp32"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/txt_new_theme"
                android:textColor="@color/white"
                android:textSize="26sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_new_themes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_new_themes"
                android:layout_marginStart="@dimen/dp12"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:spanCount="4"
                tools:itemCount="12"
                android:paddingBottom="@dimen/dp16"
                tools:listitem="@layout/item_new_theme" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>